Added chat styles

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,3 +22,11 @@
         @apply bg-violet-700 rounded-2xl text-white p-3;
     }
 }
+
+.single-message-current-user {
+    border-radius: 2rem 2rem .5rem 2rem;
+}
+
+.single-message {
+    border-radius: 2rem 2rem 2rem .5rem;
+}
