--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,7 +10,7 @@
 
     input {
         @apply rounded-2xl px-3 py-2;
-        @apply border-slate-200;
+        @apply border-gray-200;
         @apply border-2;
     }
 
